# dji-tello-target-tracking

./: LICENSE  MANIFEST.in  Makefile  README.md  demo_drone.py  demo_webcam.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamtest.py  telloCV-for-tracking.py  telloCV.py  tracker.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml
src/: __init__.py  config.py  detector.py  drone_controller.py  tracker.py  utils.py
tests/: __init__.py  test_config.py  test_detector.py  test_tracker.py  test_utils.py
